fix: code block overflow scroll

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -356,6 +356,7 @@ pre {
     counter-increment: line 0;
     display: grid;
     padding: 0.5rem 0;
+    overflow-x: scroll;
 
     & [data-highlighted-chars] {
       background-color: var(--highlight);
